--- a/Ai_Therepist.ipynb
+++ b/Ai_Therepist.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -622,6 +623,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SmritiVerma6725/Ai-Therepist/blob/main/Ai_Therepist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -735,7 +746,7 @@
       "metadata": {
         "id": "Dl4oZ8EZC9Vn"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
